UI rewrite. Switch to JQuery UI.
Support of values and markers in Sudoku cells.
Board is SVG instead of HTML table.
Changed the way to display selected edit cell.

--- a/html5/src/AUTHORS
+++ b/html5/src/AUTHORS
@@ -1,6 +1,6 @@
 See file named LICENSE being part of the repository.
 
-Copyright (c) 2016
+Copyright (c) 2016, 2023
 @author Oliver Merkel, Merkel(dot)Oliver(at)web(dot)de.
 All rights reserved.
 
