--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 See file named LICENSE being part of the repository.
 
-Copyright (c) 2016
+Copyright (c) 2016, 2023
 @author Oliver Merkel, Merkel(dot)Oliver(at)web(dot)de.
 All rights reserved.
 
